--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "borgar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -22,7 +22,8 @@
     "express-handlebars": "^3.1.0",
     "handlebars": "^4.7.2",
     "mysql": "^2.18.1",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "orm": "^5.0.5"
   },
   "devDependencies": {}
 }
