--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "borgar",
   "version": "1.0.0",
   "description": "",
-  "main": "index.handlebars",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
