--- a/config/config.json
+++ b/config/config.json
@@ -1,25 +1,25 @@
 {
   "development": {
-    "username": "wjad02q54lqjib4k",
-    "password": "r7g99e304w8cucx9 ",
-    "database": "j9v325q3q2c3gqjp",
-    "host": "gzp0u91edhmxszwf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "", //check MySQL or Heroku Database for this
+    "password": "",
+    "database": "",
+    "host": "",
     "port": 3306,
     "dialect": "mysql"
   },
   "test": {
-    "username": "wjad02q54lqjib4k",
-    "password": "r7g99e304w8cucx9 ",
-    "database": "j9v325q3q2c3gqjp",
-    "host": "gzp0u91edhmxszwf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "",
+    "password": "",
+    "database": "",
+    "host": "",
     "port": 3306,
     "dialect": "mysql"
   },
   "production": {
-    "username": "wjad02q54lqjib4k",
-    "password": "r7g99e304w8cucx9 ",
-    "database": "j9v325q3q2c3gqjp",
-    "host": "gzp0u91edhmxszwf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "",
+    "password": "",
+    "database": "",
+    "host": "",
     "port": 3306,
     "dialect": "mysql"
   }
